--- a/css/main.css
+++ b/css/main.css
@@ -97,156 +97,185 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-  html {
-    font-size: 11px;
-    font-family: Helvetica, sans-serif;
-  }
-  
-  body {
-    font-size: 1em;
-    height: 100vh;
-  }
+html {
+  font-size: 14px;
+  font-family: Helvetica, sans-serif;
+}
 
-  h2 {
-    font-size: 4.5em;
-    text-transform: uppercase;
-    padding: 0;
-    margin: 0;
-  }
+body {
+  font-size: 1em;
+  height: 100vh;
+}
 
-  h3 {
-    font-size: 1.4em;
-    text-transform: uppercase;
-    padding: 0;
-    margin: 0;
-  }
+h2 {
+  font-size: 4.5em;
+  text-transform: uppercase;
+  padding: 0;
+  margin: 0;
+}
 
-  header {
-    width: 100%;
-    position: fixed;
-  }
+h3 {
+  font-size: 1.4em;
+  text-transform: uppercase;
+  padding: 0;
+  margin: 0;
+}
 
-  header > figure {
-    width: calc(100%/2);
-    float: left;
-  }
+header {
+  width: 100%;
+  position: fixed;
+}
 
-  .socials ul {
-    text-align: right;
-    padding: 0 10px 30px 0;
-  }
+header > figure {
+  width: calc(100% / 2);
+  float: left;
+}
 
-  .socials ul li {
-    display: inline-block;
-    padding-left: 45px;
-  }
+.socials ul {
+  text-align: right;
+  padding: 0 10px 30px 0;
+}
 
-  .socials ul li a {
-    font-size: 2em;
-    color: black;
-  }
+.socials ul li {
+  display: inline-block;
+  padding-left: 45px;
+}
 
-  figure {
-    max-width: 200px;
-  } 
+.socials ul li a {
+  font-size: 2em;
+  color: black;
+}
 
-  section {
-    width: 50%;
-    float: left;
-  }
+figure {
+  max-width: 200px;
+}
 
-  .main-title {
-    position: relative;
-    transform: rotate(-90deg);
-    text-transform: uppercase;
-    font-size: 2em;
-    bottom: -60px;
-  }
+section {
+  /*width: 50%;*/
+  float: left;
+}
 
-  .sign-up {
-    background-color: rgb(214, 214, 214);
-    min-height: 100vh;
-    height: 100%;
-    display: flex;
-    align-items: baseline;
-    justify-content: space-around;
-    text-align: right;
-  }
+.main-title {
+  width: 60%;
+}
 
-  .sign-up .content-wrapper {
-    padding: 20px 40px;
-    width: 100%;
-  }
+.main-title .background-image-1 {
+  position: fixed;
+  bottom: 0;
+  left: 9%;
+  z-index: -1;
+}
 
-  .content-wrapper > h3 {
-    padding: 5px 0 40px 0;
-  }
+.main-title .background-image-2 {
+  position: fixed;
+  top: 0;
+  left: 31%;
+  z-index: -1;
+}
 
-  .sign-up-form {
-    display: inline-block;
-    padding-left: 38%;
-  }
+.main-title .background-image-1 img,
+.main-title .background-image-2 img {
+  width: 60%;
+}
 
-  .sign-up-perks {
-    text-transform: uppercase;
-    text-align: left;
-    margin: 0 auto;
-  }
+.main-title .rectangle {
+  position: fixed;
+  top: 28%;
+  height: 62%;
+  width: 45%;
+  z-index: -2;
+  background-color: rgb(226, 226, 226);
+}
 
-  .sign-up-perks ul {
-    padding-left: 1em;
-  }
+.main-title h1 {
+  transform: rotate(-90deg);
+  text-transform: uppercase;
+  font-size: 5.7em;
+  font-weight: 900;
+  line-height: 1.3em;
+}
 
-  .sign-up-form input,
-  .sign-up-form select {
-    box-sizing: border-box;
-    display: block;
-    width: 100%;
-    padding: 15px 30px; 
-    margin: 10px 0;
-    border: 1px grey solid;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    color: rgb(160, 160, 160);
-    background: transparent;
-  }
+.sign-up {
+  background-color: rgb(214, 214, 214);
+  min-height: 100vh;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  text-align: right;
+  width: 40%;
+}
 
-  input[type=button] {
-    float: right;
-    width: auto;
-    padding: 15px 30px; 
-    background:rgb(224, 68, 68); 
-    color: white;
-    border:0 none;
-    cursor:pointer;
-    -webkit-border-radius: 5px;
-    border-radius: 5px; 
-    text-transform: uppercase;
-  }
+.sign-up .content-wrapper {
+  padding: 20px 40px;
+}
 
-  footer {
-    text-align: center;
-    font-size: 1.4em;
-  }
+.sign-up-form {
+  display: inline-block;
+  padding-left: 38%;
+  padding-top: 5%;
+}
 
-  footer ul li {
-    list-style-type: none;
-    display: inline-block;
-  }
+.sign-up-perks {
+  text-transform: uppercase;
+  text-align: left;
+  margin: 0 auto;
+}
 
-  footer ul li::after {
-    content: "|";
-    padding: 0 10px 0 10px;
-  }
+.sign-up-perks ul {
+  padding-left: 1em;
+}
 
-  footer ul li:nth-last-child(1)::after {
-    content: " ";
-  }
+.sign-up-form input,
+.sign-up-form select {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  padding: 15px 30px;
+  margin: 10px 0;
+  border: 1px grey solid;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  color: rgb(160, 160, 160);
+  background: transparent;
+}
 
-  footer ul li a {
-    text-decoration: none;
-    color: black;
-  }
+input[type="button"] {
+  float: right;
+  width: auto;
+  padding: 15px 30px;
+  background: rgb(224, 68, 68);
+  color: white;
+  border: 0 none;
+  cursor: pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  text-transform: uppercase;
+}
+
+footer {
+  text-align: center;
+  font-size: 1.4em;
+}
+
+footer ul li {
+  list-style-type: none;
+  display: inline-block;
+}
+
+footer ul li::after {
+  content: "|";
+  padding: 0 10px 0 10px;
+}
+
+footer ul li:nth-last-child(1)::after {
+  content: " ";
+}
+
+footer ul li a {
+  text-decoration: none;
+  color: black;
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -411,4 +440,3 @@ textarea {
     page-break-after: avoid;
   }
 }
-
